# semantic-grain

./: .gitignore  LICENSE  README.md  Start Semantic Grain.bat  Stop Semantic Grain.bat  environment.yml  pyproject.toml
presets/: delta_400.yaml
scripts/: prepare_examples.py
semantic_grain/: __init__.py  __main__.py  app.py  cache.py  config.py  device.py  pipeline.py
semantic_grain/blending/: mask_composer.py
semantic_grain/color/: bw_conversion.py
semantic_grain/grain/: generator.py  profile.py
semantic_grain/io/: loader.py  saver.py
semantic_grain/luminance/: tone_curve.py  zone_system.py
semantic_grain/segmentation/: backend.py  class_mapping.py  registry.py  segformer_seg.py  skin_detector.py
